# grpc_rust_tonic

client/: buf.gen.yaml  package.json
client/pages/: index.tsx
client/services/: greeting_connectweb.ts  greeting_pb.ts
proto/: greeting.proto
server/: Cargo.toml
server/src/: main.rs
