[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "rt", "macros"] }
tonic = "0.9.2"
tonic-web = "0.9.2"
tower-http = "0.4.0"

[build-dependencies]
tonic-build = "0.9.2"
